# maxtouch-debug

./: LICENSE  README.md  index.html  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  maxtouch.rs
src/components/: DebugPlot.vue  RegisterMap.vue
src/components/service/: RegisterMapService.ts
