[package]
name = "maxtouch-debug"
version = "0.0.0"
description = "A tool for debugging/tuning QMK trackpads with MaxTouch sensors."
authors = ["George Norton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maxtouch_debug_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12.3"
hidapi = "2.6.1"
zerocopy = { version = "0.7.35", features = ["derive"] }
image = "0.25.2"

